--- a/style.css
+++ b/style.css
@@ -1,4 +1,16 @@
+.button {
+    display: flex;
+    justify-content: center;
+    margin: 40px;
+}
+
+button {
+    padding: 32px;
+    font-size: 64px;
+}
+
 .container {
+    margin: auto;
     background-color: antiquewhite;
     display: flex;
     flex-direction: row;
